--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <h1>Bea Cecilie Karlsen</h1>
+    <ul>
+        <li><a href="https://www.linkedin.com/in/bckarlsen/?originalSubdomain=uk">LinkedIn</a></li>
+    </ul>
     <script src="script.js"></script>
 </body>
 </html>
