--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <img style="border-radius:100px" src="https://media-exp1.licdn.com/dms/image/C5603AQHxS-AO9mG1vg/profile-displayphoto-shrink_200_200/0/1578090090022?e=1616630400&v=beta&t=dm-lwCWapE1yejGwMPyRt6vn-sddhltBOLr0mYYPEWA" alt="Avatar">
     <h1>Bea Cecilie Karlsen</h1>
     <ul>
         <li><a href="https://www.linkedin.com/in/bckarlsen/?originalSubdomain=uk">LinkedIn</a></li>
