--- a/index.html
+++ b/index.html
@@ -5,11 +5,34 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img style="border-radius:100px" src="https://media-exp1.licdn.com/dms/image/C5603AQHxS-AO9mG1vg/profile-displayphoto-shrink_200_200/0/1578090090022?e=1616630400&v=beta&t=dm-lwCWapE1yejGwMPyRt6vn-sddhltBOLr0mYYPEWA" alt="Avatar">
-    <h1>Bea Cecilie Karlsen</h1>
-    <ul>
-        <li><a href="https://www.linkedin.com/in/bckarlsen/?originalSubdomain=uk">LinkedIn</a></li>
-    </ul>
+    <div class="flex-center">
+        <div class="flex-main">
+            <div>
+                <img class="profile-img border-emphasis" src="pic2.jpg" alt="Avatar">
+            </div>
+            <div>
+            
+                <span class="misc-link">
+                    <a href="https://www.linkedin.com/in/bckarlsen/?originalSubdomain=uk">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </span>
+            
+                <span class="misc-link">
+                    <a href="mailto:bceciliekarlsen@gmail.com">
+                        <i class="fas fa-at"></i>
+                    </a>
+                </span>
+            </div>
+            <div>
+                <h1>Bea Cecilie Karlsen</h1>
+                <p class="job-title">-Research & Marketing Assistant</p>
+                <div class="line"></div>
+                <p class="my-bio">Graduated with a First Class Honours degree in Environmental Sustainability MA (Hons). Passionate about pursuing a career in the sustainability and environmental sector. Currently working in the renewable energy sector. </p>
+            </div>
+        </div>
+    </div>
+    <script src="https://kit.fontawesome.com/4f195b89a0.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
